<resources>
    <string name="app_name">Navigation Menu</string>
    <string name="navigation_menu">Navigation Menu</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="others">Others</string>
    <string name="setting">Setting</string>
    <string name="question">Question</string>
    <string name="valentino_rossi">Valentino Rossi</string>
    <string name="verified">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>